--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@headlessui/react": "^1.7.17",
     "@radix-ui/react-separator": "^1.0.3",
     "@types/node": "20.6.0",
